--- a/app.json
+++ b/app.json
@@ -6,7 +6,9 @@
     "pages/logs/logs",
     "pages/demo2/demo2",
     "pages/demo3/demo3",
-    "pages/demo4/demo4"
+    "pages/demo4/demo4",
+    "pages/demo5/demo5",
+    "pages/demo6/demo6"
   ],
   "window": {
     "backgroundTextStyle": "dark",
