--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,4 +1,5 @@
 {
+  "setting": {},
   "condition": {
     "plugin": {
       "list": []
@@ -14,6 +15,24 @@
         {
           "name": "demo3",
           "pathName": "pages/demo3/demo3",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "demo4",
+          "pathName": "pages/demo4/demo4",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "demo5",
+          "pathName": "pages/demo5/demo5",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "demo6",
+          "pathName": "pages/demo6/demo6",
           "scene": null
         }
       ]
